# castel

./: .env  .gitignore  Cargo.toml  Comparison.md  EnvSpec.md  Environment.md  Goals.md  History.md  LanguageSpec.md  Makefile  Overview.md  README.md  Rationale.md  SUMMARY.md  Shell.md  ShellRef.md  StdRef.md  build.rs  castel.db  rustfmt.toml  why_not_x_language.md
components/sh/: Cargo.toml  README.md
components/sh/src/: chars.rs  lexer.rs  main.rs  opts.rs  parser.rs  tokens.rs
components/wayland/: Cargo.toml
components/wayland-client/: Cargo.toml
components/wayland-client/src/: lib.rs
components/wayland/src/: geometry.rs  lib.rs
components/waytokserv/: Cargo.toml
components/waytokserv/src/: main.rs
components/wm/: Cargo.toml  rustfmt.toml
components/wm/src/: container.rs  extensions.rs  layout.rs  main.rs
cwm/: Cargo.toml
cwm/src/: main.rs
docs/: design.gv
migrations/20170520183750_create_notes/: up.sql
src/: document.rs  events.rs  handlers.rs  main.rs  models.rs  store.rs  test.rs  view.rs
test/: simple_doc.json
