[package]
name = "castel"
version = "0.1.0"
authors = ["Javier Maldonado <3goliad@gmail.com>"]
build = "build.rs"

[dependencies]
glutin = "*"
libc = "*"
diesel = { version = "*", features = ["sqlite"] }
diesel_codegen = { version = "*", features = ["sqlite"] }
dotenv = "*"
freetype-rs = "*"

[build-dependencies]
gl_generator = "*"
