[package]
name = "rash"
version = "0.1.0"
authors = ["3goliad <3goliad@gmail.com>"]
description = "a minimal shell"
homepage = "https://github.com/3goliad/rash"
repository = "https://github.com/3goliad/rash.git"
license = "MIT"
readme = "README.md"
publish = false

[dependencies]
regex = "0.1.77"
getopts = "0.2.14"

[dependencies.nom]
version = "1.2.4"
features = ["regexp"]
